--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
-* play mode: make "Solve" a toggle button
-* add a way to specify timeout in msec, use it between successive per-frontier cell computations
-* draw currently-verified cell with colors indicating minimal and maximal values obtained via simplex
-* zoom
 * experiment with adding newly discovered constraints on the fly; this increases number of variables and might require too many computations
-* show number of masked/remaining mines in status bar
-* when number of remaining mines is "low", add variables for all remaining cells and add equation for remaining mines
+* "global" solver mode: add all unknown cells, add constraint row which sums all them up to a number of remaining mines
 * when simplex-based solver can't proceed, calculate/display probability of a mine under each uncovered cell
+* do simplex on sub-segments: smaller LPs solve quicker
+* see if we maximize first would work faster
+* use all threads; would have to copy GLP instances into isolated processes
+* try glpk's MIP
+* see if setting a vairable to 0 and testing for feasibility is quicker
